<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henryruiz.manejoalmacenmantis.CrearDetalleDVIFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view3">

                <EditText
                    android:id="@+id/editTextReferencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_ref"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view4">

                <EditText
                    android:id="@+id/editTextMonto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_montob"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view5">

                <EditText
                    android:id="@+id/editTextDescrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_obs"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:singleLine="false"
                    android:lines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view6">

                <EditText
                    android:id="@+id/editTextFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_date"
                    android:inputType="date"
                    android:maxLines="10"
                    android:singleLine="false"
                    android:lines="4" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/parallax_image_height"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_below="@+id/Layout1"
                android:id="@+id/imagenTomada"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/view6"
                android:id="@+id/Layout1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_alignParentBottom="false"
                android:layout_alignParentTop="false"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/buttonGuardar"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_save"
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view6"
                    android:layout_gravity="center_vertical" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Volver"
                    android:id="@+id/volver"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>
